# robofetz_as

./: .gitignore  .gitmodules  =2.0.0  AGENTS.md  Camera_Settings.md  Dockerfile  README.md  README_cam.md  cameracalib.md  fetz_launch.sh  this.md  thisnotenowliveshere.md  videodevices.md
src/arena_perception/: Arena_Camera_Setup.md  README.md  YOUTUBE_DOWNLOADER_README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/arena_perception/arena_perception/: 1_dataset_create.py  2_train_yolo.py  FrameDiffRobotDetector.py  april_detection_node.py  apriltag_detection_node.py  arena_calibration_service.py  camera_info_rectified.py  camera_rectification_node.py  detection_2d_to_3d_node.py  detection_2d_to_3d_node_ooooold.py  detection_kalman_filter.py  detection_transformation_2D_3D.py  detection_transformation_2D_3D_node.py  elf_rectification.py  filter_transform_node.py  find_camera_in_world_service.py  frame_diff_detector.py  image_format_converter.py  minimal_tf_test.py  multi_sensor_kalman_filter.py.py  odom_drift_correction_node.py  odom_drift_correction_node1.py  odom_drift_correction_node2.py  opponent_det_ColorMultiple.py  opponent_det_ColorSingle.py  opponent_det_ContourSingle.py  opponent_det_KalmanFusion.py  opponent_det_MOG2multiple.py  opponent_det_MOG2single.py  opponent_detection.py  opponent_tracker_node.py  param_loader.py  point_to_pose_remap.py  robot_detection.py  robot_detection_node.py  robot_detection_node1.py  robot_detection_node2.py  roi_mask_node.py  roi_masking_node.py  static_tag_position_publisher.py  (+4 more)
src/arena_perception/config/: apriltag_detection_config.yaml  arena.yaml  arena_camera_info_480p.yaml  arena_camera_info_480p_usb.yaml  arena_camera_info_600p.yaml  arena_camera_info_ardu_gruen_1200p.yaml  arena_camera_info_fs_1200p.yaml  arena_camera_info_fs_1200p_scaled.yaml  arena_camera_info_fs_600p_scaled.yaml  arena_camera_info_fs_960.yaml  arena_camera_info_fs_arducam_1200p.yaml  arena_camera_info_ti_600p.yaml  arena_camera_params.yaml  arena_camera_ros_config.yaml  arena_camera_usb_config.yaml  arena_detection_config.yaml  arena_detection_config_real.yaml  arena_detection_config_sim.yaml  arena_perception_config.yaml  calibration_output_arena_cam_600p.yaml  filter_config.yaml  find_camera_in_world_config_sim.yaml  kalman_config.yaml  kalman_fusion_config.yaml  odom_drift_correction_config.yaml  opponent_det_pipeline_config.yaml  opponent_detection_config.yaml  robot.yaml  robot_detection_config.yaml  robot_detection_filter_config.yaml  robot_localization_config.yaml  t490s_camera.yaml  t490s_camera_params.yaml
src/arena_perception/launch/: arena_camera.launch.py  arena_camera_ros.launch.py  arena_camera_usb.launch.py  arena_perception.launch.py  cam.launch.py  fake_arena_perception.launch.py  opponent.launch.py  opponent_Fusiondetection.launch.py  opponent_detection.launch.py  opponent_detection_color.launch.py  opponent_detection_mog.launch.py  robot_localization.launch.py
src/detection/: package.xml  setup.py
src/detection/config/: arena.yaml  arena_camera.yaml  arena_camera_params.yaml  t480s_camera.info.yaml  t490s_camera.yaml  t490s_camera_params.yaml
src/detection/detection/: arena_calibration_service.py  enemy_detection.py  main_lean.py  opponent_detection.py  rectify_fisheye.py  robot_detection.py
src/detection/launch/: arena_camera.launch.py  arena_camera_undistorted.launch.py  cam.launch.py  detection.launch.py
src/robofetz_gazebo/: package.xml  setup.cfg  setup.py
src/robofetz_gazebo/config/: arena_camera_info_sim_600p_pinhole.yaml  arena_camera_info_sim_600p_wideangle.yaml  arena_camera_info_sim_wideangle_600p_scaled.yaml  camera_pinhole_old.yaml  camera_wideangle.yaml
src/robofetz_gazebo/launch/: fake_arena_perception.launch.py  gazebo_bot.launch.py  gazebo_bot_with_opponent.launch.py  robofetz_gazebo_sim.launch.py
src/robofetz_gazebo/models/: opponent.xacro  robot.xacro
src/robofetz_gazebo/parameters/: bridge_parameters.yaml
src/robofetz_gazebo/robofetz_gazebo/: tf_to_pose.py  (+2 more)
(+147 files in other folders)
