<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detection</name>
  <version>0.0.0</version>
  <description>Detect robot and opponent robot</description>
  <maintainer email="eubotx@mailbox.org">eubotx</maintainer>
  <license>GNU GPL</license>

  <!-- ROS 2 runtime and build dependencies -->
  <depend>rclpy</depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Build dependency for Python packages -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <build_depend>ament_python</build_depend>
  <exec_depend>ament_python</exec_depend>
  <exec_depend>ros-${ROS_DISTRO}-usb-cam</exec_depend>
  <exec_depend>python3-pydantic</exec_depend>
  <exec_depend>python3-v4l2</exec_depend>  <!-- For v4l2-ctl tools -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
