<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robofetz_gazebo</name>
  <version>0.0.0</version>
  <description>Robot simulation for differential drive robot with spinning weapon in an arena with top down camera and ground truth position publishing.</description>
  <maintainer email="eubotx@mailbox.org">eubotx</maintainer>
  <license>GNU GPL</license>

  <!-- Gazebo -->
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>xacro</depend>
  <depend>ros_gz_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>